--- a/dotnet-cross.csproj
+++ b/dotnet-cross.csproj
@@ -2,8 +2,8 @@
     <Sdk Name="DotNet.ReproducibleBuilds.Isolated" Version="1.1.1" />
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFrameworks>net7.0;net8.0;net9.0</TargetFrameworks>
+        <TargetFramework>net9.0</TargetFramework>
         <RootNamespace>Cross</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
